--- a/Changes
+++ b/Changes
@@ -4,6 +4,9 @@
 
 == Unreleased Changes
 
+* Adjust ruby.h per Trac 851  .
+* Fix spec failure in rb_num2dbl with nil arg.
+
 == Changes for 25282 2011-02-17
 * Fix Trac 850, problem creating namespace in persistent mode
 * Updates for rails 3.0.4
