--- a/Changes
+++ b/Changes
@@ -4,8 +4,10 @@
 
 == Unreleased Changes
 
+== Changes for 25289 2011-02-18
 * Adjust ruby.h per Trac 851  .
 * Fix spec failure in rb_num2dbl with nil arg.
+* Fixed two GS/S 3.0 problems
 
 == Changes for 25282 2011-02-17
 * Fix Trac 850, problem creating namespace in persistent mode
