--- a/Changes
+++ b/Changes
@@ -4,8 +4,7 @@
 
 == Unreleased Changes
 
-* Fix part of trac 857
-* Fix Trac 860
+* Fix Trac 857, 860
 * Implement rb_str_buf_new - note comments in ruby.h
 
 == Changes for 25289 2011-02-18
