--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
 
 * Fix Trac 857, 860
 * Implement rb_str_buf_new - note comments in ruby.h
+* More details in lib/ruby/1.8/Maglev_c_extensions.txt
 
 == Changes for 25289 2011-02-18
 * Adjust ruby.h per Trac 851  .
