Update version number to 25315

--- a/Changes
+++ b/Changes
@@ -4,8 +4,8 @@
 
 == Unreleased Changes
 
-== Changes for 25314 2011-02-23
-* Fix Trac 857, 860
+== Changes for 25315 2011-02-23
+* Fix Trac 857, 860, 862.
 * Implement rb_str_buf_new - note comments in ruby.h
 * More details in lib/ruby/1.8/include/Maglev_c_extensions.txt
 * Fixes to rbconfig.rb neeeded for mkmf
