--- a/THANKS
+++ b/THANKS
@@ -16,4 +16,5 @@ including:
 - Wayne Seguin for adding MagLev support to RVM - http://rvm.beginrescueend.com/
 - Daniel Starling for generalizing the KD-Tree example to n dimensions and adding
   other improvements/
-- Tim Felgentreff for creating an FFI'd bcrypt-ruby that works with MagLev
+- Tim Felgentreff for creating an FFI'd bcrypt-ruby that works with MagLev, getting
+  mkmf.rb working and other help with MagLev C extensions.
