Setup topaz script directory so others could contribute more easily

--- a/src/topaz/README.rdoc
+++ b/src/topaz/README.rdoc
@@ -1,24 +1,20 @@
-= Sample Topaz Scripts
-
-WARNING: These scripts are not fully tested and may not function as expected.
-Seaside is loaded using Metacello Configurations on the web. There is no guarantee
-that others will test their Metacello project updates on MagLev.
+= MagLev Topaz Scripts
 
 == Overview
 
-This directory contains topaz scripts that do useful stuff. They can be 
+These directories contain topaz scripts that do useful stuff. They can be 
 invoked using rake -- i.e.
   rake maglev:input_file[src/topaz/filename]
 
-You can trace the execution of the script and watch for errors using
-  tail -f $MAGLEV_HOME/log/maglev/topaz.log
-
 For example, this will load a boatload of Seaside goodness into a
 running MagLev image.
-  rake maglev:input_file[src/topaz/loadSeaside.topaz]
+  rake maglev:input_file[src/topaz/Seaside30/loadSeaside.topaz]
 
 and this will fire up Seaside on localhost:8383
-  rake maglev:input_file[src/topaz/runSeaside-Swazoo.topaz]
+  rake maglev:input_file[src/topaz/Seaside30/runSeaside-Swazoo.topaz]
+
+You can trace the execution of these scripts and watch for errors using
+  tail -f $MAGLEV_HOME/log/maglev/topaz.log
 
 == Prerequisites
 
@@ -51,78 +47,10 @@ which may not exist on your system. Here's one way to create it
 * {Seaside Project}[http://seaside.st/]
 * {Seaside Book}[http://book.seaside.st/book]
 
-== Playing with Seaside in MagLev
-
-To use the GemTools One-Click Pharo image at
-http://seaside.gemstone.com/squeak/GemTools-MagLev-Pharo-1.0.zip instead
-of running these snippets in Topaz, you'll need to start both MagLev
-and a NetLDI
-    maglev start
-    maglev startnetldi
-    
-TODO: Turn some of these Seaside snippets into Topaz scripts in
-this directory. Your suggestions and contributions are welcome.
-
-The following is copied from the GemTools workspace you get when
-logged in to MagLev from the Pharo image mentioned above.
-
-The default username/password for Seaside is admin/seaside.
-
-"start FastCGI adaptor ... does not return. 
-Use #startGemServerOn: in standalone server gem"
-    WAFastCGIAdaptor startOn: 9001.
-    WAFastCGIAdaptor stop.
-
-"start Swazoo adaptor ... does not return. 
-Use #startGemServerOn: in standalone server gem"
-    WAGsSwazooAdaptor startOn: 8383.
-    WAGsSwazooAdaptor stop.
-    SwazooServer initSingleton.
-
-"Object log"
-    WAAdmin 
-        register: WAObjectLog 
-        asApplicationAt: WAObjectLog entryPointName
-        user: 'admin' password: 'tool'.
-    ObjectLogEntry objectLog.
-    ObjectLogEntry emptyLog.
-
-"Set/clear breakpoints at usual suspects for errors"
-    WABasicDevelopment setBreakPoints.
-    WABasicDevelopment clearBreakPoints.
-
-"Shortcuts"
-    WAEnvironment reloadApplications.           "reload Seaside applications"
-    WAAdmin defaultServerManager initialize.    "reset list of server adaptors"
-    WABasicDevelopment reapSeasideCache.        "reap expired sessions"
-    WADispatcher default.                       "access root dispatcher"
-                        
-"Specify FastCGI for runSeasideGems30"
-    WAGemStoneRunSeasideGems default
-        name: 'FastCGI';
-        adaptorClass: WAFastCGIAdaptor;
-        ports: #(9001 9002 9003).
-    WAGemStoneRunSeasideGems restartGems.       "execute runSeasideGems30 script"
-
-"Specify Swazoo for runSeasideGems30"
-    WAGemStoneRunSeasideGems default
-        name: 'Swazoo';
-        adaptorClass: WAGsSwazooAdaptor;
-        ports: #(8383).
-    WAGemStoneRunSeasideGems restartGems.       "execute runSeasideGems30 script"
-
-"Use this handler when running production Seaside servers out of topaz vms (default)"
-    WAAdmin applicationExceptionHandlingDefaults 
-        at: #exceptionHandler 
-        put: WAGemStoneProductionErrorHandler.
-  
-"Use this handler when running Seaside server out of a GemTools vm"
-    WAAdmin applicationExceptionHandlingDefaults 
-        at: #exceptionHandler 
-        put: WAGemStoneWalkbackErrorHandler.
-
-"Use this handler when running development Seaside servers out of topaz vms"
-    WAAdmin applicationExceptionHandlingDefaults 
-        at: #exceptionHandler 
-        put: WARemoteDebuggingWalkbackErrorHandler.
-
+== Contributing
+ 
+* Fork the project from https://github.com/MagLev/maglev-topaz-scripts
+* Start a feature or topic branch
+* Commit and push until you are happy with your contribution
+* Make sure to test with the latest MagLev
+* Send a pull request
