--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@
   For more details see: http://bit.ly/d3C6S1
 
 == Unreleased Changes
+* Update to Bundler 1.0.10
+* Update to RubyGems 1.6.0
 
 == Changes for 25352 2011-03-01
 * Changes to make RDiscount work, make IO Enumerable
