--- a/Changes
+++ b/Changes
@@ -3,15 +3,16 @@
   For more details see: http://bit.ly/d3C6S1
 
 == Unreleased Changes
+
+== Changes for 25359 2011-03-02
 * Update to Bundler 1.0.10
 * Update to RubyGems 1.6.0
-* Changes to ruby.h to change a few inline functions to MRI compatible macros.
-
-== Changes for 25352 2011-03-01
+* Change a few inline functions in ruby.h to MRI compatible macros.
 * Changes to make RDiscount work, make IO Enumerable
 * Update docs/ruby_and_smalltalk
 * Fix compile flags in rbconfig for MacOSX
 * A couple of bugfixes to underlying GemStone 3.0 system
+* Quite a few changes to .gs files in the GemStone 3.0 image directory
 
 == Changes for 25343 2011-02-26
 * Fix Trac 866, IO.popen
