Update version number to 25375

--- a/Changes
+++ b/Changes
@@ -4,14 +4,12 @@
 
 == Unreleased Changes
 
-* Fix Trac 869
-
-== Changes for 25370 2011-03-03
+== Changes for 25375 2011-03-04
 * Update to Bundler 1.0.10
 * Update to RubyGems 1.6.0
 * Change a few inline functions in ruby.h to MRI compatible macros.
 * Changes to make RDiscount work, make IO Enumerable
-* Fix Trac 861
+* Fix Trac 861 & 869
 * Update docs/ruby_and_smalltalk
 * Fix compile flags in rbconfig for MacOSX
 * A couple of bugfixes to underlying GemStone 3.0 system
