--- a/examples/misc/WebTools/README.rdoc
+++ b/examples/misc/WebTools/README.rdoc
@@ -1,11 +1,11 @@
-= Miscellaneous Demos
-
-This directory contains miscellaneous demos.
-
-
-== WebTools
+= WebTools
 
 This demo runs a very simple web application that allows you to browse the
 Smalltalk code in the VM, and to examine statistics of various processes
 connected to a repository.
 
+To run:
+
+  $ rake
+
+Then browse to http://localhost:8080/
