--- a/Changes
+++ b/Changes
@@ -4,9 +4,12 @@
 
 == Unreleased Changes
 
+== Changes for 25414 2011-03-10
 * Add an include/st.h which just defines the  enum st_retval .
 * Implement initialize_on_load for FFI libraries, to fix Trac 800.
 * Fix Trac 874 in Regexp primitives.
+* Updated WebTools example
+* More bugfixes and improvements to the underlying GemStone 3.0 system
 
 == Changes for 25393 2011-03-08
 * Implement rb_hash_foreach for C extensions.
