--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@
 * Changes to rbconfig.rb and FFI to make some constants transient.
 * Optimizations to method_source.rb
 * Fix some spec failures.
+* Add rb_str_buf_new2 to ruby.h for C extensions
 
 == Changes for 25476 2011-03-16
 * Updated installers to deal with new Intel Core i7 Macs
